--- a/MVCDashboard/Web.config
+++ b/MVCDashboard/Web.config
@@ -13,8 +13,8 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="data source=(localdb)\mssqllocaldb;initial catalog=aspnet-MVCDashboard-20200324123724;integrated security=SSPI" providerName="System.Data.SqlClient" />
-    <add name="NWindConnectionString" connectionString="data source=.;Initial Catalog=CustomNorthwindDB;integrated security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="data source=(localdb)\mssqllocaldb;initial catalog=aspnet-MVCDashboard-20200324123724;integrated security=SSPI" providerName="System.Data.SqlClient" />
+    <add name="NWindConnectionString" connectionString="data source=.;Initial Catalog=CustomNorthwindDB;integrated security=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
